feat: API implementation
more api logic implementation
