# assets/swagger/swagger.json
@@ -21,6 +21,106 @@
   "host": "bookmarks.binggl.net",
   "basePath": "/api/v1",
   "paths": {
+    "/api/v1/bookmarks": {
+      "put": {
+        "description": "use the supplied payload to update a existing bookmark",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "bookmarks"
+        ],
+        "summary": "update a bookmark",
+        "operationId": "UpdateBookmark",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/Bookmark"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "schema": {
+              "$ref": "#/definitions/Result"
+            }
+          },
+          "400": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "401": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "403": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          }
+        }
+      },
+      "post": {
+        "description": "use the supplied payload to create a new bookmark",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "bookmarks"
+        ],
+        "summary": "create a bookmark",
+        "operationId": "CreateBookmark",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/Bookmark"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "schema": {
+              "$ref": "#/definitions/Result"
+            }
+          },
+          "400": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "401": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "403": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/bookmarks/byname": {
       "get": {
         "description": "search for bookmarks by name and return a list of search-results",
@@ -201,6 +301,57 @@
         }
       }
     },
+    "/api/v1/bookmarks/sortorder": {
+      "put": {
+        "description": "provide a new sortorder for a list of IDS",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "bookmarks"
+        ],
+        "summary": "change the sortorder of bookmarks",
+        "operationId": "UpdateSortOrder",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/BookmarksSortOrder"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "schema": {
+              "$ref": "#/definitions/Result"
+            }
+          },
+          "400": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "401": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "403": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          }
+        }
+      }
+    },
     "/api/v1/bookmarks/{id}": {
       "get": {
         "description": "returns a single bookmark specified by it's ID",
@@ -244,6 +395,49 @@
             }
           },
           "404": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          }
+        }
+      },
+      "delete": {
+        "description": "delete the bookmark identified by the supplied id",
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "bookmarks"
+        ],
+        "summary": "delete a bookmark",
+        "operationId": "DeleteBookmark",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Result",
+            "schema": {
+              "$ref": "#/definitions/Result"
+            }
+          },
+          "400": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "401": {
+            "description": "ProblemDetail",
+            "schema": {
+              "$ref": "#/definitions/ProblemDetail"
+            }
+          },
+          "403": {
             "description": "ProblemDetail",
             "schema": {
               "$ref": "#/definitions/ProblemDetail"
@@ -370,7 +564,7 @@
       "x-go-package": "github.com/bihe/bookmarks/internal/server/api"
     },
     "BookmarkResult": {
-      "description": "BookmarkResult hast additional information about a Bookmark",
+      "description": "BookmarkResult has additional information about a Bookmark",
       "type": "object",
       "properties": {
         "message": {
@@ -383,6 +577,28 @@
         },
         "value": {
           "$ref": "#/definitions/Bookmark"
+        }
+      },
+      "x-go-package": "github.com/bihe/bookmarks/internal/server/api"
+    },
+    "BookmarksSortOrder": {
+      "description": "BookmarksSortOrder contains a sorting for a list of ids",
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "IDs"
+        },
+        "sortOrder": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "x-go-name": "SortOrder"
         }
       },
       "x-go-package": "github.com/bihe/bookmarks/internal/server/api"
@@ -437,6 +653,25 @@
         }
       },
       "x-go-package": "github.com/bihe/commons-go/errors"
+    },
+    "Result": {
+      "description": "Result is a generic response with a string value",
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string",
+          "x-go-name": "Message"
+        },
+        "success": {
+          "type": "boolean",
+          "x-go-name": "Success"
+        },
+        "value": {
+          "type": "string",
+          "x-go-name": "Value"
+        }
+      },
+      "x-go-package": "github.com/bihe/bookmarks/internal/server/api"
     },
     "UserInfo": {
       "description": "UserInfo provides information about the currently logged-in user",
